--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,7 @@
     </style>
     <title>React App</title>
   </head>
-  <body>
+  <body style=margin:0>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
