--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/dumbbell.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -33,7 +33,7 @@
         font-family: "Roboto", sans-serif;
       }
     </style>
-    <title>React App</title>
+    <title>RACER Fitness</title>
   </head>
   <body style=margin:0>
     <noscript>You need to enable JavaScript to run this app.</noscript>
